various spacing fixes

--- a/static/css/partials/_card-popular.scss
+++ b/static/css/partials/_card-popular.scss
@@ -26,7 +26,7 @@
         @include card-image-none;
 
         height:32px;
-        margin-bottom:15px;
+        margin-bottom:12px;
 
         article {
        
